--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 0 0 89px 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -24,5 +24,10 @@ footer {
 }
 
 .About {
-  margin: 5px 0;
+  font-size: 16px;
+  margin: 8px 0;
+}
+
+.About :visited {
+  color: #fff;
 }
